# HierarchicalKV

./: .bazeliskrc  .bazelrc  .gitignore  .gitmodules  BUILD  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  STYLE_GUIDE.md  WORKSPACE  bazel_build.sh  emmatest.txt  index.html  run_all_tests.sh
.github/workflows/: blossom-ci.yml  docs-build.yaml  docs-sched-rebuild.yaml
benchmark/: BUILD  benchmark.cc.cu  benchmark.py  benchmark_util.cuh  dual_bucket_benchmark.cc.cu  find_with_missed_keys_benchmark.cc.cu  merlin_hashtable_benchmark.cc.cu
build_deps/gpus/: check_cuda_libs.py  configure.bzl  find_cuda_config.py
build_deps/remote_config/: common.bzl  remote_platform_configure.bzl
cmake/modules/: ClangFormat.cmake
cpp/include/: managed.cuh  merlin_flexible_memory.cuh  merlin_hashtable.cuh  merlin_initializers.cuh  merlin_optimizers.cuh  merlin_util.h
cpp/poc/: cg.cc.cu  d2h.cc.cu  d2p.cc.cu  profiler_upsert.cc.cu  proto.cc.cu  proto_d2h.cc.cu  rehash.cc.cu  sort.cc.cu  upsert_optimizing.cc.cu
cpp/src/: merlin_hashtable_test.cc.cu  proto.cc.cu  proto_d2h.cc.cu
cpp/tests/: merlin_hashtable_test.cc.cu
docs/: Makefile  README.md  requirements-doc.txt
docs/api_docs/: README.md
docs/source/: CONTRIBUTING.md  conf.py  index.rst  toc.yaml
include/: BUILD  merlin_hashtable.cuh  merlin_hashtable_base.hpp  merlin_hashtable_device.cuh  merlin_initializers.cuh  merlin_localfile.h  merlin_localfile.hpp  merlin_optimizers.cuh
include/merlin/: BUILD  allocator.cuh  array_kernels.cuh  core_kernels.cuh  debug.hpp  embedding_kernels.cuh  external_storage.hpp  flexible_buffer.cuh  group_lock.cuh  group_lock.hpp  initializers.cuh  managed.cuh  memory_pool.cuh  multi_vector.hpp  optimizers.cuh  rocksdb_storage.hpp  table_manager.cuh  types.cuh  utils.cuh
master/: .buildinfo  CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
master/_sources/: CONTRIBUTING.md.txt  README.md.txt
master/api/: classnv_1_1merlin_1_1HashTable.html  classnv_1_1merlin_1_1HashTableBase.html  classnv_1_1merlin_1_1LocalKVFile.html  classnv_1_1merlin_1_1initializers_1_1RandomNormal.html  classnv_1_1merlin_1_1optimizers_1_1Adam.html  classnv_1_1merlin_1_1optimizers_1_1Optimizer.html  enum_merlin__hashtable_8cuh_1a8c9f1dcaae52c7049c17f0999ad62015.html  enum_merlin__hashtable_8cuh_1abc5cbfaa74d1985b7ce5cf41a4bc35ed.html  file_merlin_hashtable.cuh.html  file_merlin_initializers.cuh.html  file_merlin_localfile.h.html  file_merlin_optimizers.cuh.html  index.html  namespace_nv.html  namespace_nv__merlin.html  namespace_nv__merlin__initializers.html  namespace_nv__merlin__optimizers.html  program_listing_file_merlin_hashtable.cuh.html  program_listing_file_merlin_initializers.cuh.html  program_listing_file_merlin_localfile.h.html  program_listing_file_merlin_optimizers.cuh.html  structnv_1_1merlin_1_1EvictStrategy.html  structnv_1_1merlin_1_1HashTableOptions.html  structnv_1_1merlin_1_1HashTable_1_1Vector.html  typedef_merlin__hashtable_8cuh_1a20afe66b4f5d4690391f7ef8845223e5.html  typedef_merlin__hashtable_8cuh_1a5001706db6e977358e7f76ad6773703a.html  typedef_merlin__hashtable_8cuh_1a75860344e3d48da549d33c7941686e7e.html  typedef_merlin__hashtable_8cuh_1ac8f98038c25ea5b1c0035a22d283c7a3.html  unabridged_orphan.html  variable_merlin__hashtable_8cuh_1a359fe56354918308560f46cb3136a3da.html
python/: BUILD  MANIFEST.in  WORKSPACE  configure.py  setup.py
python/build_deps/: build_pip_pkg.sh
python/merlin_kv/: BUILD  __init__.py  conftest.py  merlin_kv.bzl  register.py  version.py
review/pr-1/: .buildinfo  CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
review/pr-102/: genindex.html  objects.inv  searchindex.js
review/pr-103/: README.html  searchindex.js
review/pr-104/: searchindex.js
review/pr-107/: genindex.html  objects.inv  searchindex.js
review/pr-108/: objects.inv
review/pr-112/: objects.inv
review/pr-113/: README.html  (+2 more)
tests/: accum_or_assign_test.cc.cu  assign_score_test.cc.cu  assign_values_test.cc.cu  common.cuh  dual_bucket_test.cc.cu  dynamic_max_capacity_test.cc.cu  export_batch_if_test.cc.cu  ext_storage_rocksdb_test.cc.cu  find_or_insert_ptr_lock_test.cc.cu  find_or_insert_ptr_test.cc.cu  find_or_insert_test.cc.cu  find_with_missed_keys_test.cc.cu  group_lock_test.cc  group_lock_test.cc.cu  insert_and_evict_test.cc.cu  key_option_test.cc.cu  lock_unlock_test.cc.cu  memory_pool_test.cc.cu  merlin_hashtable_device_api_test.cc.cu  merlin_hashtable_test.cc.cu  reserved_bucket_test.cc.cu  reserved_keys_test.cc.cu  save_and_load_test.cc.cu  test_util.cuh  uint32_score_test.cc.cu
v0.1.0-beta.1/: .buildinfo  CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.0-beta.10/: CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.0-beta.11/: CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.0-beta.12/: CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.0-beta.2/: CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.0-beta.3/: CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.0-beta.4/: CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.0-beta.5/: CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.0-beta.6/: CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.0-beta.7/: CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.0-beta.8/: CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
v0.1.0-beta.9/: CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
(+1068 files in other folders)
